amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'randomText'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type.api.graphql#/declares/shape/InputType/property/property/randomText
  Property: 
  Range: [(15,4)-(15,22)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'randomText'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type.api.graphql#/declares/shape/InputType/property/property/randomText_1
  Property: 
  Range: [(16,4)-(16,22)]
  Location: 
